changed settings and some formating

--- a/src/modules/settings/settings.html
+++ b/src/modules/settings/settings.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="../../css/main.css">
   </head>
   <body>
-    <div id="main">
+    <div id="main" class="main">
       <div id="options" class="options"></div>
-      <div id="settingsDone" class="controls"><i class="fa fa-check fa-2x" aria-hidden="true"></i>Done</div>
+      <div id="settingsDone" class="controls buttonDone"><i class="fa fa-check fa-2x" aria-hidden="true"></i>Done</div>
     </div>
     <script>require('../settings/settingsEditor')</script>
   </body>
