--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <link rel="stylesheet" href="assets/styles/jquery.min.js">
+  <link rel="stylesheet" href="assets/styles/tether.min.js">
+  <link rel="stylesheet" href="assets/styles/bootstrap.min.js">
 </body>
 </html>
