add "library" page, start to add menu

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-  <link rel="stylesheet" href="assets/styles/jquery.min.js">
-  <link rel="stylesheet" href="assets/styles/tether.min.js">
-  <link rel="stylesheet" href="assets/styles/bootstrap.min.js">
+  <script>window.$ = window.jQuery = require('./assets/styles/jquery.min.js');</script>
+  <script src="assets/styles/tether.min.js"></script>
+  <script src="assets/styles/bootstrap.min.js"></script>
 </body>
 </html>
