add 'edit' mode, features for library view

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
   <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
-<body unselectable="on" onselectstart="return false;" onmousedown="return false;">
+<body>
   <app-root>Loading...</app-root>
   <script>window.$ = window.jQuery = require('./assets/styles/jquery.min.js');</script>
   <script src="assets/styles/tether.min.js"></script>
